# catalogue

./: .gitignore  Cargo.toml  README.md  meson.build  meson_options.txt
build-aux/flatpak/: dev.itsjamie.Catalogue.Devel.json
data/: dev.itsjamie.Catalogue.appdata.xml.in  dev.itsjamie.Catalogue.desktop.in  dev.itsjamie.Catalogue.gschema.xml.in  meson.build  resources.gresource.xml
data/style/: style-dark.css  style.css
data/ui/: app-tile.ui  carousel-tile.ui  carousel.ui  category-page.ui  category-tile.ui  window.ui
hooks/: pre-commit.hook
po/: POTFILES  meson.build
src/: application.rs  config.rs.in  macros.rs  main.rs  meson.build  window.rs
src/core/: category.rs  client.rs  mod.rs  package.rs  utils.rs
src/core/backend/: appstream.rs  flatpak.rs  mod.rs
src/widgets/: app_tile.rs  carousel.rs  category_page.rs  category_tile.rs  installed_row.rs  mod.rs  page.rs
