[package]
name = "catalogue"
version = "0.1.0"
edition = "2021"

[dependencies]
log = "0.4"
pretty_env_logger = "0.4"
gettext-rs = { version = "0.7", features = ["gettext-system"] }
once_cell = "1.9"
gtk = { version = "0.4.7", package = "gtk4" }

[dependencies.adw]
package = "libadwaita"
version = "0.2.0-alpha.2"
features = ["v1_2"]
