[package]
name = "catalogue"
version = "0.1.0"
edition = "2021"

[dependencies]
log = "0.4"
pretty_env_logger = "0.4"
gettext-rs = { version = "0.7", features = ["gettext-system"] }
once_cell = "1.9"
futures = "0.3.24"
online = "3.0.1"
dirs = "4.0.0"
dyn-clone = "1.0.9"

[dependencies.adw]
package = "libadwaita"
git = "https://gitlab.gnome.org/World/Rust/libadwaita-rs"
features = ["v1_2"]

[dependencies.flatpak]
package = "libflatpak"
git = "https://gitlab.gnome.org/World/Rust/libflatpak-rs"

[dependencies.gtk]
package = "gtk4"
git = "https://github.com/gtk-rs/gtk4-rs"
version = "0.5"
features = ["v4_6"]

[dependencies.glib]
git = "https://github.com/gtk-rs/gtk-rs-core"
version = "0.16"

[dependencies.gio]
git = "https://github.com/gtk-rs/gtk-rs-core"
version = "0.16"

[dependencies.appstream]
package = "appstream-rs"
git = "https://gitlab.gnome.org/World/Rust/appstream-rs"
